scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -591,9 +591,13 @@ button.active,
   position:    relative;
   height: 100%;
   width: 100%;
+  display:     flex;
+  align-items: stretch;
 }
 
 .sidebar-wrapper {
+  flex: 1 1 auto;
+  min-width: 0;
   width: 100%;
   height: 100%;
   position:         relative;
